--- a/lift/src/App.css
+++ b/lift/src/App.css
@@ -4,10 +4,6 @@
   justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .form{
   background-color: rgb(223, 238, 252);
@@ -118,7 +114,7 @@ input {
 
 p{
  
-    line-height: 2; /* 1.5 times the font size */
+  line-height: 2; /* 1.5 times the font size */
   
 }
 
@@ -150,3 +146,22 @@ p{
   padding: 40px 120px 0px 120px;
 }
 
+img{
+  width:800px;
+}
+
+.screw{
+  width:500px;
+}
+
+.rollers{
+  width:600px;
+}
+
+.img-container{
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
