--- a/lift/src/App.css
+++ b/lift/src/App.css
@@ -5,32 +5,47 @@
 }
 
 
-.form{
-  background-color: rgb(223, 238, 252);
+.main-container{
+  background-color: #f0f8ff;
   text-align: left;
   font-size: 18px;
   font-family: 'crimson'; 
-  width: 80%;
-  margin: 2% 10% 0 10%;
+  width: 100%;
+  
   
 }
 
-.form h1{
+h1{
  padding-bottom: 20px;
+ font-size: 45px;
+ font-family: 'crimson';
 }
 
-form{
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  grid-row-gap: 0px;
-  padding: 1% 12%;
-  font-family:'';
-  font-size:20px;
-  gap:0 80px;
+.form-container{
+  background-color: #fff;
+  margin: 20px 120px 0px 120px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+  padding: 40px 40px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
+form{
+  display: grid;
+  width: 850px;
+  grid-template-columns: max-content 1fr;
+  grid-row-gap: 0px;
+  font-family:'';
+  font-size: 22px;
+  gap:0 40px;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
+
 
 label {
   margin: 0;
@@ -38,6 +53,7 @@ label {
   margin-bottom: 10px; 
   grid-column: 1;
   font-weight: bold;
+  color: #212a31;
   
 }
 
@@ -47,74 +63,56 @@ input {
   padding: 0;
   margin-bottom: 10px; 
   margin-left: 0px;
-  height: 30px;
+  height: 35px;
   border: 1.5px solid #282c34;
   border-radius: 5px;
-  width: 80%;
+  width: 100%;
   padding-left: 15px;
-  font-size:16px;
+  font-size: 20px; 
 }
 
-#calculate-diameter{
-  height: 35px;
+
+#calculate-button{
+  margin-top: 25px;
+  margin-bottom: 25px;
+  height: 40px;
   width: 180px;
-  margin-top: 20px;
-  background-color:rgb(75, 137, 229);
-  font-size: 16px;
-  border: 1.5px solid #000309;
+  background-color:#304562;
+  font-size: 20px;
   color:white;
+  font-family: 'crimson';
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
-#calculate-diameter:hover{
- background-color: rgb(13, 62, 136);
- font-size: 17px;
- color:white;
+#calculate-button:hover{
+  cursor: pointer;
+  background-color:#1d2d44;
+  font-size: 22px;
+  color:white;
 }
 
 .underroot {
   display: inline-block;
   position: relative;
   vertical-align: middle;
-  margin-right: 8px;
+  
 }
 
 .underroot::before {
   content: '';
   position: absolute;
   width: 100%;
-  height: 1px;
+  height: 0.5px;
   background-color: black; 
   bottom: 100%;
-  right:-10px;
+  right:-11px;
+  top: 2.5px;
 }
 
-.calculations{
-  padding: 0% 10%;
-  font-family:'';
-  text-decoration: none;
-  list-style-type: none;
-  padding-bottom: 2px;
-  margin-bottom: 40px;
-}
-
-.calculations ul li{
-  list-style-type: none;
-  padding-bottom:10px;
-}
-
-#result{
- 
-  font-size:20px;
-  color: red;
-  font-family: '';
-  font-weight: bold;
-  padding: 0;
-  margin:0;
-}
 
 p{
- 
-  line-height: 2; /* 1.5 times the font size */
+  
+  line-height: 2; 
   
 }
 
@@ -141,7 +139,7 @@ p{
 
 .intro-container{
   font-family: 'crimson'; 
-  font-size: 20px;
+  font-size: 22px;
   text-align: justify;
   padding: 40px 120px 0px 120px;
 }
@@ -164,4 +162,74 @@ img{
   justify-content: center;
   display: flex;
   flex-direction: column;
+  font-weight: bold;
+}
+.about-container{
+  margin-top: 80px;
+  height: 200px;
+  padding-top:20px;
+  align-items: center;
+  background-color: #124e66;
+  color:#f0f8ff;
+  font-size: 18px;
+  justify-content: space-between;
+  font-family: 'crimson';
+}
+
+.about-container p{
+  padding: 0 120px;
+  font-size: 20px;
+}
+.about{
+  padding: 0px 120px 40px 80px;
+  display: flex;
+  align-items: center;
+  background-color: #124e66;
+  color:#f0f8ff;
+  font-size: 18px;
+  justify-content: space-between;
+}
+.about ul {
+  text-align: center;
+}
+
+
+.calculations{
+  box-sizing: border-box;
+  width:100%;
+  
+  /* font-family:'crimson'; */
+  text-decoration: none;
+  list-style-type: none;
+  padding-bottom: 2px;
+  margin-bottom: 40px;
+  padding: 40px 0;
+}
+
+.calculations ul li{
+  list-style-type: none;
+  padding-bottom:10px;
+}
+.cal-container{
+  
+  background-color: #fff;
+  margin: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  margin: 20px 120px;
+  padding: 60px 100px;
+  color: #000;
+  font-size: 18px;
+  font-family: 'crimson';
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+}
+.square-root{
+  font-size: 22px;
+
+}
+
+.result{
+  color: red;
+  font-family: '';
+  font-weight: bold;  
 }
