--- a/lift/src/components/header/navbar.css
+++ b/lift/src/components/header/navbar.css
@@ -18,13 +18,14 @@
     padding: 0;
     display: flex;
     width: 100%;
-    height: 120px;
+    height: 140px;
     min-height: 100px;
-    background-color: rgb(75, 137, 229);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    background-color:#124e66;
     text-align: center;
     justify-content: center;
     align-items: center;
-    padding-bottom: 15px;
+    padding-bottom: 0px;
     
      
 }
