--- a/lift/src/components/header/navbar.css
+++ b/lift/src/components/header/navbar.css
@@ -21,7 +21,7 @@
     height: 140px;
     min-height: 100px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color:#124e66;
+    background-color:#304562;
     text-align: center;
     justify-content: center;
     align-items: center;
