--- a/lift/src/App.css
+++ b/lift/src/App.css
@@ -166,14 +166,14 @@ img{
 }
 .about-container{
   margin-top: 80px;
-  height: 200px;
+ 
   padding-top:20px;
   align-items: center;
-  background-color: #124e66;
+  background-color: #304562;
   color:#f0f8ff;
   font-size: 18px;
   justify-content: space-between;
-  font-family: 'crimson';
+  
 }
 
 .about-container p{
@@ -181,16 +181,23 @@ img{
   font-size: 20px;
 }
 .about{
-  padding: 0px 120px 40px 80px;
+  padding: 0px 120px 20px 80px;
   display: flex;
   align-items: center;
-  background-color: #124e66;
-  color:#f0f8ff;
+  color:#fff;
   font-size: 18px;
   justify-content: space-between;
+  gap:60px;
 }
 .about ul {
   text-align: center;
+  list-style-type: none;
+  text-align: left;
+}
+
+.name{
+  font-weight: bold;
+  color:rgb(241, 211, 172)
 }
 
 
@@ -232,4 +239,16 @@ img{
   color: red;
   font-family: '';
   font-weight: bold;  
+}
+
+.copyright{
+  width:15px;
+}
+
+#copy-para{
+ 
+  font-size: 18px;
+  margin-bottom: 0;
+  margin-top:0;
+  padding-bottom: 20px;
 }
