--- a/lift/src/App.css
+++ b/lift/src/App.css
@@ -166,7 +166,6 @@ img{
 }
 .about-container{
   margin-top: 80px;
- 
   padding-top:20px;
   align-items: center;
   background-color: #304562;
@@ -180,6 +179,7 @@ img{
   padding: 0 120px;
   font-size: 20px;
 }
+
 .about{
   padding: 0px 120px 20px 80px;
   display: flex;
@@ -189,6 +189,7 @@ img{
   justify-content: space-between;
   gap:60px;
 }
+
 .about ul {
   text-align: center;
   list-style-type: none;
@@ -251,4 +252,60 @@ img{
   margin-bottom: 0;
   margin-top:0;
   padding-bottom: 20px;
+}
+
+@media screen and (max-width: 480px) {
+  img{
+    width:700px;
+  }
+
+  .form-container{
+    background-color: #fff;
+    margin: 20px 1px 1px 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 40px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  }
+
+  form{
+    display: grid;
+    width: 850px;
+    grid-template-columns: max-content 1fr;
+    grid-row-gap: 0px;
+    font-family:'';
+    font-size: 22px;
+    gap:0 40px;
+    align-items: center;
+    justify-content: center;
+   
+  }
+  
+  
+  
+  label {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px; 
+    grid-column: 1;
+    font-weight: bold;
+    color: #212a31;
+    
+  }
+  
+  input {
+    grid-column: 2;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px; 
+    height: 35px;
+    border: 1.5px solid #282c34;
+    border-radius: 5px;
+    width: 100%;
+    padding-left: 15px;
+    font-size: 20px; 
+  }
 }
